--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -8,6 +8,21 @@
 
 
 {  
+name:"JUR-354 เม็ก ฟูจิอุระ",
+image:"https://fourhoi.com/jur-354-uncensored-leak/cover-n.jpg",
+url:"https://surrit.com/148b066a-e09a-4007-9f07-9203f0a0dddd/1080p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
 name:"JJDA-026 แมรี่ ทาจิบานะ ",
 image:"https://fourhoi.com/jjda-026-uncensored-leak/cover-n.jpg",
 url:"https://surrit.com/b370d744-fd76-4fb0-aac5-c4dec6c963b1/1920x1080/video.m3u8",
