--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -7,6 +7,98 @@
 
 
 
+
+{  
+name:"MAAN-775 ",
+image:"https://fourhoi.com/maan-775/cover-n.jpg",
+url:"https://surrit.com/841d2561-bb25-49f8-b7bb-8088b5eea799/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"MAAN-775 ",
+image:"https://fourhoi.com/maan-775/cover-n.jpg",
+url:"https://surrit.com/841d2561-bb25-49f8-b7bb-8088b5eea799/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"SONE-763 ไซกะ คาวาคิตะ",
+image:"https://fourhoi.com/sone-763/cover-n.jpg",
+url:"https://surrit.com/65ce99d3-7024-48d0-a4fd-450d26d6fd95/720p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+{  
+name:"SSIS-642 คาเอเดะ ฟูอา",
+image:"https://fourhoi.com/ssis-642/cover-n.jpg",
+url:"https://surrit.com/fa2b1f0f-c5e6-4241-943e-50e554238608/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"SSIS-785 คาเอเดะ ฟูอา",
+image:"https://fourhoi.com/ssis-785/cover-n.jpg",
+url:"https://surrit.com/9c8c4ecc-8939-4c54-9b1e-21c3e327e82a/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"SSIS-825 คาเอเดะ ฟูอา",
+image:"https://fourhoi.com/ssis-825/cover-n.jpg",
+url:"https://surrit.com/88810192-ff5b-4d33-b967-d0d4dcb77a4c/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
 {  
 name:"JUR-354 เม็ก ฟูจิอุระ",
 image:"https://fourhoi.com/jur-354-uncensored-leak/cover-n.jpg",
