--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -9,6 +9,134 @@
 
 
 
+
+{  
+name:"Hijacked ดับคนเดือด ปล้นระฟ้า (2012)",
+image:"https://img.fw4free.com/postor/20190808162828MV5BMTAxMTUzNzE4MzVeQTJeQWpwZ15BbWU3MDYyNzIwOTc@._V1_.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Hijacked_2012/Hijacked_2012_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"Ninja Immovable Heart โคตรนินจา..ฆ่าไม่ตาย (2014)",
+image:"https://img.fw4free.com/postor/20190808072622MV5BMTk4MTA3NjQ5M15BMl5BanBnXkFtZTgwNzYzMDMwNTE@._V1_.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Ninja_Immovable_Heart_2014/Ninja_Immovable_Heart_2014_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"Bad Country คู่ระห่ำล้างเมืองโฉด (2014)",
+image:"https://img.fw4free.com/postor/20190806190552bad-country-535d23509af56.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Bad_Country_2014/Bad_Country_2014_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"Crying Freeman น้ำตาเพชฌฆาต (1995)",
+image:"https://img.fw4free.com/postor/20190806070229crying-freeman-579cb9277f59c.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Crying_Freeman_1995/Crying_Freeman_1995_TH_1080p.m4v/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"Lucy สวยพิฆาต (2014)",
+image:"https://img.fw4free.com/postor/20190805145407lucy-5611166e12a76.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Lucy_2014/Lucy_2014_TH_1080p.m4v/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"Tokarev (Rage) ปลุกแค้นสัญชาติคนโหด (2014)",
+image:"https://img.fw4free.com/postor/20190803215508tokarev-5d0d3235b5865.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Tokarev_2014/Tokarev_2014_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"The Losers โคตรทีม อ.ต.ร. แพ้ไม่เป็น (2010)",
+image:"https://img.fw4free.com/postor/20190802073941the-losers-5315e529f0b8d.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/The_Losers_2010/The_Losers_2010_TH_1080p.m4v/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
  
 {  
 name:"The Punisher เดอะ พันนิชเชอร์ เพชฌฆาตมหากาฬ (2004)",
