--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -11,9 +11,27 @@
 
 
 {  
-name:"Hijacked ดับคนเดือด ปล้นระฟ้า (2012)",
-image:"https://img.fw4free.com/postor/20190808162828MV5BMTAxMTUzNzE4MzVeQTJeQWpwZ15BbWU3MDYyNzIwOTc@._V1_.jpg",
-url:"https://m1free.inwstream.com:1936/movie3/Hijacked_2012/Hijacked_2012_TH_1080p.mp4/chunk.m3u8",
+name:"Heads of State ผู้นำสายบู๊กู้วิกฤต (2025)",
+image:"https://img.fw4free.com/postor/202507030820041CfBzb8xDIkSlxlwyo005lXpoAX.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Heads_of_State_2025/Heads_of_State_2025_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"The Old Guard 2 ดิ โอลด์ การ์ด 2 (2025) NETFLIX",
+image:"https://img.fw4free.com/postor/202507021457492Kflmz9Qt5UQ97JtU8mn6wTrr0z.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/The_Old_Guard_2_2025/The_Old_Guard_2_2025_TH_1080p.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
